[package]
name = "anticipate-cli"
version = "0.6.0"
edition = "2021"
description = "Script runner with asciinema support"
license = "MIT OR Apache-2.0"
default-run = "anticipate"

[workspace]
members = ["runner", "core"]

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
anticipate-runner = { version = "0.5", path = "runner" }
rayon = "1.8"
colored = "2"

[[bin]]
name = "anticipate"
path = "src/main.rs"
