[package]
name = "anticipate"
version = "0.8.0"
authors = ["tmpfs <muji@tmpfs.org>", "Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2021"
resolver = "2"
description = "Automate terminal applications in Unix like Don libes expect"
repository = "https://github.com/tmpfs/anticipate"
license = "MIT"
categories = ["development-tools::testing", "os::unix-apis", "os::windows-apis"]
keywords = ["expect", "pty", "testing", "terminal", "automation"]
readme = "README.md"

[features]
polling = ["dep:polling", "dep:crossbeam-channel"]
async = ["futures-lite", "futures-timer", "async-io", "blocking", "async-trait"]

[dependencies]
regex = "1.6.0"
futures-lite = { version = "1.12.0", optional = true }
futures-timer = { version = "3.0.2", optional = true }
async-trait = { version = "0.1", optional = true }

[target.'cfg(unix)'.dependencies]
ptyprocess = "0.4.1"
nix = "0.26"
async-io = { version = "1.9.0", optional = true }
polling = { version = "2.3.0", optional = true }

[target.'cfg(windows)'.dependencies]
conpty = "0.5.0"
blocking = { version = "1.2.0", optional = true }
crossbeam-channel = { version = "0.5.6", optional = true }

[package.metadata.docs.rs]
all-features = false
