[package]
name = "anticipate-runner"
version = "0.4.0"
edition = "2021"
description = "Script runner with asciinema support"
license = "MIT OR Apache-2.0"

[dependencies]
logos = "0.14"
thiserror = "1"
anticipate = { version = "0.8", path = "../core" }
ouroboros = "0.18"
tracing = "0.1"
unicode-segmentation = "1"
probability = "0.20"
rand = "0.8"
comma = "1"

[dev-dependencies]
anyhow = "1"
